Do not crash when pressing MMB on the hover icon and moving the mouse leaving MMB pressed.

BUG: 143387

svn path=/branches/KDE/3.5/kdelibs/; revision=646812